--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> <!--字元編碼-->
         <title>網頁simple樣式</title>
 
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="./style.css">
 
         <!-- <link rel="preconnect" href="http://fonts.googleapis.com/"> -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
@@ -14,10 +14,11 @@
         <h1>網頁simple樣式</h1>
         <div>
             <P>
+                <a href="./樣式0/index.html" target="_blank">樣式0</a>
+                <br>
                 <a href="./樣式1/index.html" target="_blank">樣式1</a>
                 <br>
                 <a href="./樣式2【網頁雙欄位】/index.html" target="_blank">樣式2【網頁雙欄位】</a>      
-                <a href="./樣式2【網頁雙欄位】/styles/styles.css" target="_blank">樣式2CSS</a> 
             </P>
             
         </div>
