--- a/樣式2【網頁雙欄位】/index.html
+++ b/樣式2【網頁雙欄位】/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"> <!--字元編碼-->
-        <title>網頁標題</title>
+        <title>樣式2</title>
 
         <link rel="stylesheet" href="./styles/styles.css">
 
@@ -12,6 +12,7 @@
     </head>
     <body>
         <h1>樣式2</h1>
+        <h1  style="color:rgb(255, 93, 93);">尚在研究中</h1>
         <p>此文件的CSS設計有：</p>
         <li>A</li>
         <li>B</li>
