--- a/樣式1/index.html
+++ b/樣式1/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8"> <!--字元編碼-->
-        <title>網頁標題</title>
+        <title>樣式1</title>
 
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="../樣式0/styles/background-styles1.css">
+        <link rel="stylesheet" href="./styles/table-styles1.css">
 
         <!-- <link rel="preconnect" href="http://fonts.googleapis.com/"> -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
@@ -16,10 +17,15 @@
 
         <!-- <ol>有順序清單，<li>每一項內文 -->
         <p>此文件的CSS設計有：</p>
-        <ol>
-            <li>body置中+邊框設計</li>
-            <li>hr分隔線設計</li>
-            <li>簡單表格設計(含滑鼠效果)</li>
+        <ol style="color:rgb(0, 0, 0);">
+            <li>引用樣式0設計：
+                <ul style="color:rgb(252, 204, 137);">
+                    <li >body置中+邊框設計</li>
+                    <li >hr分隔線設計</li>
+                    <li >h1~h3字體置中</li>
+                </ul>
+            </li>
+            <li>簡單表格設計1</li>
         </ol>
         
 
